YLP-3707 User account page new design (#1864)

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -22,7 +22,6 @@
   "account-creation-finalization": "Account creation finalization",
   "account-creation-finalized": "Account creation finalized",
   "account-flagged-for-deletion": "You no longer have access to this application. Please contact the support if you think this an error.",
-  "account-preferences": "Profile settings",
   "acknowledge-training": "I went through the entire training and I understood it",
   "actions": "Actions",
   "activation-code": "Activation code",
@@ -135,7 +134,6 @@
   "basal-rate-unit": "U/h",
   "below-range": "Below range",
   "below-range-tooltip": "Below range",
-  "birthplace": "Birth place",
   "brand-name": "YourLoops",
   "breadcrumb-home": "Home",
   "breadcrumb-notifications": "Notifications",
@@ -181,6 +179,7 @@
   "care-team-values-entered": "The care team values have been entered. Please save the changes.",
   "care-teams": "Care teams",
   "caregiver-and-family": "Caregiver and family",
+  "caregiver-upgrade-account-description": "Caregivers can upgrade their account to a professional account. The professional account is reserved for healthcare professionals as a tool to facilitate patient care.",
   "caregivers-title": "My Caregivers",
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
@@ -465,14 +464,13 @@
   "patient-list-search-placeholder": "Search for a patient...",
   "patient-list-search-tooltip": "Search by first name, last name or birthdate (dd/mm/yyyy)",
   "patient-profile": "Profile",
-  "patient-profile-hba1c": "Initial HbA1c {{hba1cDate}}",
   "patient-update-error": "Patient update failed",
   "patient-update-success": "Patient update succeeded",
   "patient-update-with-alert-success": "Patient update succeeded and alerts changed",
   "pen-bolus": "Pen bolus",
   "pending": "Pending",
   "pending-invite": "Pending invite",
-  "personal-information": "Personal Information",
+  "personal-information": "Personal information",
   "personal-settings": "Personal settings",
   "phone-number": "Phone number",
   "preferences": "Preferences",
@@ -485,9 +483,9 @@
   "privacy-policy-checkbox": "Privacy policy checkbox",
   "product-labelling": "Product Labelling",
   "profession-dialog-title": "Please choose a profession",
-  "profile-settings": "Profile settings",
-  "profile-update-failed": "Profile update failed, not all data could be saved",
-  "profile-updated": "Profile updated",
+  "professional-account": "Professional account",
+  "profile-update-failed": "User account update failed, not all data could be saved",
+  "profile-updated": "User account updated",
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
@@ -634,6 +632,7 @@
   "until": "Until",
   "updated": "Updated",
   "use-supported-browser": "For a better user experience, it is advised to use Google Chrome on desktop.",
+  "user-account": "User account",
   "user-account-already-verified": "This account is already verified.",
   "user-account-does-not-exist": "The user account does not exist.",
   "user-name": "{{lastName}} {{firstName}}",
