--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -22,6 +22,7 @@
   "account-creation-finalization": "Account creation finalization",
   "account-creation-finalized": "Account creation finalized",
   "account-flagged-for-deletion": "You no longer have access to this application. Please contact the support if you think this an error.",
+  "additional-information-disclaimer": "This information is not mandatory and can be added or modified at any time. The information you provide will be visible to your healthcare professional.",
   "acknowledge-training": "I went through the entire training and I understood it",
   "actions": "Actions",
   "activation-code": "Activation code",
@@ -33,6 +34,7 @@
   "add-new-patient-disabled-info": "To invite a patient, you must first select a care team from the dropdown menu. You can create you own care team if you need to. Alternatively, you can provide the patient with your YourLoops email address so they can enable private data sharing with you.",
   "add-patient": "Add a patient",
   "added": "Added",
+  "additional-information": "Additional information",
   "address": "Address",
   "admin": "Admin",
   "age": "Age",
@@ -260,12 +262,15 @@
   "devices-and-current-parameters": "Devices and current settings",
   "diabetes-type": "Diabetes type",
   "diagnosis": "Diagnosis",
+  "diet": "Diet",
   "dialog-pdf-options-custom-range": "or a customized period",
   "dialog-pdf-options-format": "Choose an output format",
   "dialog-pdf-options-output-format-csv": "CSV",
   "dialog-pdf-options-output-format-pdf": "PDF",
   "dialog-pdf-options-presets": "Choose a fixed period",
   "difference": "Difference",
+  "drug-treatment-other-than-insulin": "Drug treatment (other than insulin)",
+  "duration-per-week": "Number of physical activity hours per week",
   "edit-medical-report": "Edit medical report {{number}}",
   "email": "Email",
   "email-change-dialog-text-part1": "You will receive a code on your new e-mail address.",
@@ -324,6 +329,8 @@
   "header-tab-patients": "Patients",
   "health-care-professional": "Healthcare professional",
   "high-bg-input": "High blood glucose input",
+  "hobby": "Hobby",
+  "hours": "hours",
   "hypoglycemia": "Below range",
   "hypoglycemia-tooltip1": "Hypoglycemia: {{percentage}}",
   "hypoglycemia-tooltip2": "Alert triggered when {{threshold}}% of time below {{veryLowBg}} {{unit}} threshold over the period considered.",
@@ -463,6 +470,7 @@
   "number-of-bolus": "Total number of bolus",
   "number-of-rescue-carbs": "Number of rescue carbs",
   "number-of-rescue-carbs-modified": "Number of rescue carbs modified",
+  "open-comments": "Open comments",
   "open-team-menu": "Open team menu",
   "open-team-selection-menu": "Open team selection menu",
   "optional": "Optional",
@@ -481,7 +489,9 @@
   "personal-information": "Personal information",
   "personal-settings": "Personal settings",
   "phone-number": "Phone number",
+  "physical-activity": "Physical activity",
   "preferences": "Preferences",
+  "profession": "Profession",
   "preset-dates-range-1week": "1 week",
   "preset-dates-range-2weeks": "2 weeks",
   "preset-dates-range-3months": "3 months",
