YLP-3711 feat: Implement change email for HCP and Caregiver (#1882)

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -88,6 +88,7 @@
   "alarm-urgent-low-soon-title": "Urgent low soon",
   "alarm-with-code": "Alarm {{code}}",
   "alerts": "Alerts",
+  "alert-change-email-success": "E-mail changed successfully, please login with new email.",
   "alert-change-password-email-failed": "Impossible to send the change password e-mail. Please try again later.",
   "alert-change-password-email-success": "E-mail sent successfully",
   "alert-email-not-verified": "You have not verified your email.",
@@ -144,6 +145,7 @@
   "button-back": "Back",
   "button-cancel": "Cancel",
   "button-care-team-values": "Apply care team values",
+  "button-change-email": "Change e-mail",
   "button-change-password": "Change password",
   "button-close": "Close",
   "button-confirm": "Confirm",
@@ -184,12 +186,13 @@
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
   "change-history": "Change history",
-  "change-password-info": "By clicking this button, you will receive an e-mail allowing you to change your password.",
+  "change-password-info": "You will receive an e-mail allowing you to change your password.",
   "chat-footer-private": "Private",
   "chat-footer-reply": "Reply",
   "chat-footer-start-writing": "Start typing",
   "close-without-saving": "Data change unsaved",
   "close-without-saving-warning" : "This page has unsaved changes, they will be lost if you close without saving.\nAre you sure you want to leave ?",
+  "code": "Code",
   "coefficient-of-variation": "Coefficient of Variation",
   "coefficient-of-variation-tooltip": "**CV (Coefficient of Variation):** The ratio of the standard deviation to the mean glucose. For any period greater than 1 day, we calculate the mean of daily CV.",
   "coefficient-of-variation-with-value": "CV ({{cbgLabel}})",
@@ -265,6 +268,8 @@
   "difference": "Difference",
   "edit-medical-report": "Edit medical report {{number}}",
   "email": "Email",
+  "email-change-dialog-text-part1": "You will receive a code on your new e-mail address.",
+  "email-change-dialog-text-part2": "This code will allow us to validate your new e-mail address.",
   "end-date": "End date",
   "end-time": "End time",
   "error-caregiver-already-in-list": "You are already sharing your data with this caregiver.",
@@ -273,6 +278,7 @@
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
   "error-hyperglycemia": "Hyperglycemia limit must be between hypoglycemia limit and severe hyperglycemia limit",
   "error-hypoglycemia": "Hypoglycemia limit must be between severe hypoglycemia limit and hyperglycemia limit",
+  "error-occurred": "An error occurred, please try again later.",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
   "error-severe-hyperglycemia": "Severe hyperglycemia limit must be between hyperglycemia limit and the max cgm limit",
@@ -431,6 +437,7 @@
   "monitoring-alerts-tooltip": "Hover over the icons to learn more",
   "my-caregivers": "My caregivers",
   "my-private-practice": "My private practice",
+  "new-email": "New e-mail",
   "new-message": "New",
   "new-time": "New time",
   "new-unread-messages": "The patient has sent you new messages",
