YLP-3701 Eating shortly management (#1885)

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -375,6 +375,7 @@
   "max-length-exceeded": "the maximum length is {{max}} characters",
   "meal-bolus": "Meal bolus",
   "meal-carbs": "Meal carbs",
+  "meal-without-carb-counting": "Meal without carb counting",
   "medical-files": "Medical files",
   "medical-report": "Medical report",
   "medical-report-delete-failed": "Medical report delete failed",
