implemente insulin display and so refacto/enhance tests

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -340,6 +340,11 @@
   "in-range": "in range",
   "insulin": "Insulin",
   "insulin-on-board": "Insulin on board (IOB)",
+  "insulin-type-novorapid": "Novorapid® U100",
+  "insulin-type-humalog": "Humalog® U100",
+  "insulin-type-fiasp": "FIASP® U100",
+  "insulin-type-lyumjev": "Lyumjev® U100",
+  "insulin-type-other": "Other",
   "insulin-unit-u": "U",
   "invalid-code": "The code is invalid",
   "invalid-email": "Invalid email address (special characters are not allowed).",
