--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -187,7 +187,7 @@
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
   "change-history": "Change history",
-  "change-password-info": "By clicking this button, you will receive an e-mail allowing you to change your password.",
+  "change-password-info": "You will receive an e-mail allowing you to change your password.",
   "chat-footer-private": "Private",
   "chat-footer-reply": "Reply",
   "chat-footer-start-writing": "Start typing",
@@ -493,7 +493,7 @@
   "pen-bolus": "Pen bolus",
   "pending": "Pending",
   "pending-invite": "Pending invite",
-  "personal-information": "Personal Information",
+  "personal-information": "Personal information",
   "personal-settings": "Personal settings",
   "phone-number": "Phone number",
   "physical-activity": "Physical activity",
@@ -509,8 +509,8 @@
   "product-labelling": "Product Labelling",
   "profession-dialog-title": "Please choose a profession",
   "professional-account": "Professional account",
-  "profile-update-failed": "Profile update failed, not all data could be saved",
-  "profile-updated": "Profile updated",
+  "profile-update-failed": "User account update failed, not all data could be saved",
+  "profile-updated": "User account updated",
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
