integrate back changes in release/v3.8.0 (#1909)
* rc 0
* rc 1
* rc 2
* YLP-3765 Fix parameter change tooltip (#1903)
* Crowdin i18n: Translation updates (#1904)
* Minor correction (#1902)
* remove chip called 'in range'
* YLP-3764 Feat: close change password modal (#1900)

Co-authored-by: Célia <116577202+celia-rouis@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: dblBot <platforms@diabeloop.fr>
Co-authored-by: Nasser <22765713+Nas84@users.noreply.github.com>
Co-authored-by: Yann BLANC <yann.blanc@diabeloop.fr>
Co-authored-by: Célia <celia.rouis@diabeloop.fr>

* Crowdin i18n: Translation updates (#1907)

Co-authored-by: dblBot <platforms@diabeloop.fr>

* final version 3.8

* Feat: fix csp for electronic label (#1910)

---------

Co-authored-by: Célia <116577202+celia-rouis@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: dblBot <platforms@diabeloop.fr>
Co-authored-by: Nasser <22765713+Nas84@users.noreply.github.com>
Co-authored-by: Yann BLANC <yann.blanc@diabeloop.fr>
Co-authored-by: Célia <celia.rouis@diabeloop.fr>

--- a/locales/it/yourloops.json
+++ b/locales/it/yourloops.json
@@ -22,12 +22,19 @@
   "account-creation-finalization": "Completamento creazione account",
   "account-creation-finalized": "Creazione account completata",
   "account-flagged-for-deletion": "Non hai più accesso a questa applicazione. Contatta il supporto se ritieni che si tratti di un errore.",
+  "additional-information-disclaimer": "Queste informazioni non sono obbligatorie e possono essere aggiunte o modificate in qualsiasi momento. Le informazioni fornite saranno visibili al tuo professionista sanitario.",
   "acknowledge-training": "Ho svolto tutta l’attività di formazione e l’ho compresa",
   "actions": "Azioni",
   "activation-code": "Codice di attivazione",
+  "active-insulin": "Insulina attiva",
+  "adapt-alerts-close": "Mantenere i valori attuali",
+  "adapt-alerts-confirm": "Adatta avvisi",
+  "adapt-alerts-message": "Il profilo del paziente è stato aggiornato. Vuoi adattare gli avvisi al nuovo profilo o mantenere quelli attuali?",
+  "adapt-alerts-title": "Nuovo profilo per il paziente",
   "add-new-patient-disabled-info": "Per invitare un paziente, devi prima selezionare un team di cura dal menu a discesa. Se necessario, puoi creare un tuo team di cura. In alternativa, puoi fornire al paziente il tuo indirizzo e-mail YourLoops in modo che possa abilitare la condivisione con te dei suoi dati privati.",
   "add-patient": "Aggiungi un paziente",
   "added": "Aggiunto",
+  "additional-information": "Informazioni aggiuntive",
   "address": "Indirizzo",
   "admin": "Admin",
   "age": "Età",
@@ -82,6 +89,8 @@
   "alarm-urgent-low-soon-description": "Il trasmettitore prevede che il glucosio rilevato sarà inferiore o uguale a {{value}} {{unit}} entro 20 minuti.",
   "alarm-urgent-low-soon-title": "Ipoglicemia urgente imminente",
   "alarm-with-code": "Allarme {{code}}",
+  "alerts": "Avvisi",
+  "alert-change-email-success": "L'indirizzo e-mail è stato aggiornato, effettua il login con il nuovo indirizzo e-mail.",
   "alert-change-password-email-failed": "Impossibile inviare l’e-mail per la modifica della password. Riprova più tardi.",
   "alert-change-password-email-success": "E-mail inviata correttamente",
   "alert-email-not-verified": "Non hai verificato il tuo indirizzo e-mail.",
@@ -138,6 +147,7 @@
   "button-back": "Indietro",
   "button-cancel": "Annulla",
   "button-care-team-values": "Applica i valori del team di cura",
+  "button-change-email": "Cambia e-mail",
   "button-change-password": "Modifica password",
   "button-close": "Chiudi",
   "button-confirm": "Conferma",
@@ -172,19 +182,25 @@
   "care-team-values-entered": "Sono stati immessi i valori del team di cura. Salva le modifiche.",
   "care-teams": "Team di cura",
   "caregiver-and-family": "Caregiver e famiglia",
+  "caregiver-upgrade-account-description": "I caregiver possono passare a un account professionale. L'account professionale è riservato ai professionisti sanitari come strumento per facilitare l'assistenza ai pazienti.",
   "caregivers-title": "I miei caregiver",
   "certified-professional-account": "Operatore sanitario certificato",
   "change-columns-settings": "Modifica impostazioni colonne",
   "change-history": "Modifica cronologia",
+  "change-password-info": "Riceverai una e-mail che ti permetterà di cambiare la password.",
   "chat-footer-private": "Privato",
   "chat-footer-reply": "Rispondi",
   "chat-footer-start-writing": "Inizia a digitare",
+  "close-without-saving": "Modifica dei dati non salvata",
+  "close-without-saving-warning": "Questa pagina contiene modifiche non salvate, che andranno perse se la chiudi senza salvare.\nSei sicuro di voler uscire?",
+  "code": "Codice",
   "coefficient-of-variation": "Coefficiente di Variazione",
   "coefficient-of-variation-tooltip": "**CV (Coefficiente di Variazione):** il rapporto di deviazione standard rispetto al glucosio medio. Per ogni periodo superiore a 1 giorno, si calcola la media del CV giornaliero.",
   "coefficient-of-variation-with-value": "CV ({{cbgLabel}})",
   "column-header-glucose-management": "GMI",
   "columns-settings-cannot-changed-pending-tab": "Non è possibile modificare le impostazioni delle colonne quando ci si trova nella scheda In attesa",
   "compute-oneday-time-in-range": "**Metodo di calcolo:**\n\n**: (%)** è il numero di letture comprese nell’intervallo diviso per tutte le letture di questo periodo.\n\n**(tempo)** è 24 ore moltiplicato per % nell’intervallo.",
+  "compute-oneday-time-in-tight-range": "**Metodo di calcolo:**\n\n**(%)** è il numero di letture comprese nell’intervallo stretto diviso per tutte le letture di questo periodo.\n\n**(tempo)** è 24 ore moltiplicato per % nell’intervallo.",
   "configure-monitoring-alerts": "Configura avvisi di monitoraggio",
   "confirmed-dose": "Dose media confermata",
   "consent": "Consenso",
@@ -223,6 +239,8 @@
   "data-not-transmitted": "Dati non trasmessi",
   "data-not-transmitted-tooltip1": "Dati non trasmessi: {{percentage}}%",
   "data-not-transmitted-tooltip2": "Avviso attivato quando il {{threshold}}% dei dati non viene trasmesso nel periodo considerato.",
+  "data-period-text": "Dati calcolati sugli ultimi 14 giorni (giorno corrente escluso). I valori corrispondono alla media dei valori giornalieri.",
+  "data-period-text-trends": "Dati calcolati sul periodo selezionato. I valori corrispondono alla media dei valori giornalieri.",
   "date": "Data",
   "date-of-birth": "Data di nascita",
   "date-picker-days-range": "{{numDays}} giorni selezionati",
@@ -243,22 +261,38 @@
   "devices-and-current-parameters": "Dispositivi e impostazioni",
   "diabetes-type": "Tipo di diabete",
   "diagnosis": "Diagnosi",
+  "diet": "Dieta alimentare",
   "dialog-pdf-options-custom-range": "o un periodo personalizzato",
   "dialog-pdf-options-format": "Scegli un formato di uscita",
   "dialog-pdf-options-output-format-csv": "CSV",
   "dialog-pdf-options-output-format-pdf": "PDF",
   "dialog-pdf-options-presets": "Scegli un periodo fisso",
+  "difference": "Differenza",
+  "drug-treatment-other-than-insulin": "Terapia farmacologica (esclusa l'insulina)",
+  "duration-per-week": "Numero di ore di attività fisica a settimana",
   "edit-medical-report": "Modifica il referto medico {{number}}",
   "email": "E-mail",
+  "email-change-dialog-text-part1": "Riceverai un codice al tuo nuovo indirizzo e-mail.",
+  "email-change-dialog-text-part2": "Questo codice ci permetterà di verificare il tuo nuovo indirizzo e-mail.",
   "end-date": "Data finale",
   "end-time": "Ora di fine",
   "error-caregiver-already-in-list": "Stai già condividendo i tuoi dati con questo caregiver.",
   "error-email-verification": "Si è verificato un errore durante il processo.",
   "error-http-40x": "Si è verificato un errore. Contattare il supporto per ricevere assistenza",
   "error-http-500": "Si è verificato un problema. Riprova tra qualche minuto. Se il problema persiste, contatta il supporto per ricevere assistenza",
+  "error-hyperglycemia": "Il limite di iperglicemia deve essere compreso tra il limite di ipoglicemia e il limite di iperglicemia grave",
+  "error-hypoglycemia": "Il limite di ipoglicemia deve essere compreso tra il limite di ipoglicemia grave e il limite di iperglicemia",
+  "error-occurred": "Si è verificato un errore, per favore riprova più tardi.",
   "error-patient-already-in-team": "Questo paziente sta già condividendo i dati con il team.",
   "error-patient-already-invited": "Questo paziente è già stato invitato ma non ha ancora confermato.",
+  "error-severe-hyperglycemia": "Il limite di iperglicemia grave deve essere compreso tra il limite di iperglicemia e il limite massimo del CGM",
+  "error-severe-hypoglycemia": "Il limite di ipoglicemia grave deve essere compreso tra il limite di ipoglicemia e il valore minimo consentito",
+  "estimated-total-insulin": "Fabbisogno insulinico totale stimato",
+  "estimated-total-insulin-tooltip": "**Fabbisogno insulinico totale stimato:** Stima del fabbisogno insulinico totale del paziente (basale e in bolo, in unità) su 24 ore. Questa stima considera soltanto il periodo in modalità Loop, in modo da risultare quanto più possibile vicina ai reali fabbisogni fisiologici del paziente.",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**Come viene calcolato:** Somma di tutte le erogazioni di insulina basale e in bolo effettuate durante il periodo in modalità Loop (in unità), riportata a 24 ore e divisa per il numero di giorni in questa vista.",
+  "event-icon": "Icona dell'evento",
   "event-trigger-threshold": "Soglia di attivazione evento",
+  "equipment-date": "Data di messa in servizio",
   "feedback-checkbox": "Casella di controllo per feedback",
   "filter-cannot-apply-pending-tab": "Impossibile applicare filtri sulla scheda In attesa",
   "filter-data-not-transmitted": "Filtra i pazienti con un avviso di monitoraggio “Dati non trasmessi”",
@@ -294,13 +328,16 @@
   "header-tab-patients": "Pazienti",
   "health-care-professional": "Operatore sanitario",
   "high-bg-input": "Inserita glicemia alta",
+  "hobby": "Hobby",
   "hours": "ore",
   "hypoglycemia": "Sotto l'intervallo",
   "hypoglycemia-tooltip1": "Ipoglicemia: {{percentage}}%",
   "hypoglycemia-tooltip2": "Avviso attivato quando il {{threshold}}% del tempo è trascorso al di sotto della soglia di {{veryLowBg}} {{unit}} nel periodo considerato.",
   "identification-code": "Codice di identificazione",
+  "important-information": "Informazioni importanti",
   "information": "Informazioni",
   "initial-hba1c": "HbA1c iniziale",
+  "in-range": "nell’intervallo",
   "insulin": "Insulina",
   "insulin-on-board": "Insulina attiva (IOB)",
   "insulin-type-novorapid": "Novorapid® U100",
@@ -339,8 +376,11 @@
   "manual-bolus": "Bolo Manuale",
   "manual-flag": "Contrassegno manuale",
   "maximum": "Massimo:",
+  "max-hours-per-week": "una settimana ha 168 ore",
+  "max-length-exceeded": "la lunghezza massima è di {{max}} caratteri",
   "meal-bolus": "Bolo del pasto",
   "meal-carbs": "Carboidrati pasto",
+  "meal-without-carb-counting": "Pasto senza conteggio dei carboidrati",
   "medical-files": "File medici",
   "medical-report": "Referto medico",
   "medical-report-delete-failed": "Eliminazione del referto medico non riuscita",
@@ -411,7 +451,9 @@
   "monitoring-alerts-tooltip": "Passa il cursore sopra le icone per saperne di più",
   "my-caregivers": "I miei caregiver",
   "my-private-practice": "Il mio studio privato",
+  "new-email": "Nuova e-mail",
   "new-message": "Nuovo",
+  "new-time": "Nuovo orario",
   "new-unread-messages": "Il paziente ti ha inviato nuovi messaggi",
   "night-mode": "Modalità notturna",
   "no": "No",
@@ -447,9 +489,11 @@
   "patient-profile": "Profilo",
   "patient-update-error": "Aggiornamento del paziente non riuscito",
   "patient-update-success": "Aggiornamento del paziente riuscito",
+  "patient-update-with-alert-success": "Aggiornamento del paziente riuscito e avvisi modificati",
   "pen-bolus": "Bolo con penna",
   "pending": "In attesa",
   "pending-invite": "Invito in attesa",
+  "personal-information": "Informazioni personali",
   "personal-settings": "Impostazioni personali",
   "phone-number": "Numero di telefono",
   "physical-activity": "Attività fisica",
@@ -459,14 +503,19 @@
   "preset-dates-range-2weeks": "2 settimane",
   "preset-dates-range-3months": "3 mesi",
   "preset-dates-range-4weeks": "4 settimane",
+  "previous-time": "Tempo precedente",
   "privacy-policy": "Informativa sulla privacy",
   "privacy-policy-checkbox": "Casella di controllo per informativa sulla privacy",
   "product-labelling": "Etichettatura del prodotto",
   "profession-dialog-title": "Scegli una professione",
+  "professional-account": "Account professionale",
+  "profile-update-failed": "Aggiornamento dell'account utente non riuscito, non tutti i dati sono stati salvati",
+  "profile-updated": "Account utente aggiornato",
   "progression-proposal": "Proposta di progressione",
   "pump-battery-empty": "Batteria della pompa esaurita",
   "ratio-dose": "Rapporto",
   "range": "Intervallo",
+  "range-description": "Impostare manualmente ciascun valore delle soglie di glucosio o applicare raccomandazioni internazionali per:",
   "range-hyperglycemia": "Iperglicemia",
   "range-hypoglycemia": "Ipoglicemia",
   "range-profile-type-1-and-2": "Tipo 1",
@@ -499,6 +548,7 @@
   "sensor-usage-tooltip": "**Uso dei sensori:** tempo di raccolta dei dati da parte di {{cbgLabel}}, diviso per il tempo totale rappresentato in questa vista.",
   "sensor-warmup": "Riscaldamento sensore",
   "sensor-warmup-session-end": "Fine sessione",
+  "set-target": "Impostare obiettivo glicemico",
   "settings-change": "Modifica delle impostazioni",
   "severe-hypoglycemia": "Ipoglicemia grave",
   "severe-hypoglycemia-below": "Ipoglicemia grave sotto",
@@ -573,6 +623,8 @@
   "time-in-range-cgm-one-day": "**Tempo nell’intervallo:** tempo trascorso nell’intervallo, in base alle letture del CGM.",
   "time-in-range-dt1": "Tempo nell'intervallo (obiettivo predefinito)",
   "time-in-range-tooltip": "Tempo nell’intervallo",
+  "time-in-tight-range": "Tempo nell'intervallo ristretto",
+  "time-in-tight-range-cgm-one-day": "**Tempo nell’intervallo:** tempo trascorso nell’intervallo, in base alle letture del CGM.",
   "time-loop": "Tempo in modalità loop",
   "time-loop-how-calculate": "**Metodo di calcolo**:\n\n(%) è la durata in modalità loop ON o OFF divisa per la durata complessiva dei valori basali per questo periodo.\n\n(tempo) è il tempo stimato per ciascuna modalità.",
   "time-loop-tooltip": "**Tempo in modalità loop**: tempo trascorso in erogazione basale automatizzata.",
@@ -630,6 +682,7 @@
   "no-specific-diet": "Nessuna dieta specifica",
   "vegetarian": "Vegetariano",
   "gluten-free": "Senza glutine",
+  "low-carbohydrates-diet": "Dieta a basso contenuto di carboidrati",
   "vegan": "Vegano",
   "ketogenic-diet": "Dieta chetogenica",
   "caloric-restriction": "Restrizione calorica",
