--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -456,6 +456,7 @@
   "new-unread-messages": "The patient has sent you new messages",
   "night-mode": "Night mode",
   "no": "No",
+  "no-bolus-recommended": "No bolus recommended",
   "no-cartridge-changes": "No cartridge changes over the period",
   "no-insulin-left-in-reservoir": "There is no insulin left in the reservoir.",
   "no-medical-files-hcp": "No medical files have yet been created.",
