feat: implement device changes history (v1) and tests

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -186,7 +186,7 @@
   "caregivers-title": "My Caregivers",
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
-  "change-history": "Change history",
+  "change-history": "Settings change history",
   "change-password-info": "You will receive an e-mail allowing you to change your password.",
   "chat-footer-private": "Private",
   "chat-footer-reply": "Reply",
@@ -259,6 +259,8 @@
   "device": "Device",
   "devices": "Devices",
   "devices-and-current-parameters": "Devices and current settings",
+  "device-change-history": "Devices change history",
+  "device-history-title": "Device change",
   "diabetes-type": "Diabetes type",
   "diagnosis": "Diagnosis",
   "diet": "Diet",
@@ -688,5 +690,15 @@
   "caloric-restriction": "Caloric restriction",
   "intermittent-fasting": "Intermittent fasting",
   "paleolithic-diet": "Paleolithic diet",
-  "other": "Other"
+  "other": "Other",
+  "HANDSET_IMEI": "IMEI",
+  "HANDSET_NAME": "Handset",
+  "HANDSET_SW_VERSION": "Software version",
+  "SMARTPHONE_MODEL": "Smartphone model",
+  "CGM_NAME": "Cgm product",
+  "CGM_MANUFACTURER": "Cgm manufacturer",
+  "PUMP_MANUFACTURER": "Pump manufacturer",
+  "PUMP_NAME": "Pump name",
+  "MOBILE_APP_VERSION": "Software version",
+  "MOBILE_APP_ACTIVATION_CODE": "Activation code"
 }
