--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -260,6 +260,16 @@
   "devices": "Devices",
   "devices-and-current-parameters": "Devices and current settings",
   "device-change-history": "Devices change history",
+  "device-change-handset-imei": "IMEI",
+  "device-change-handset-name": "Handset",
+  "device-change-handset-sw-version": "Software version",
+  "device-change-smartphone-model": "Smartphone model",
+  "device-change-cgm-name": "Cgm product",
+  "device-change-cgm-manufacturer": "Cgm manufacturer",
+  "device-change-pump-manufacturer": "Pump manufacturer",
+  "device-change-pump-name": "Pump name",
+  "device-change-mobile-app-version": "Software version",
+  "device-change-mobile-app-activation-code": "Activation code",
   "device-history-title": "Device change",
   "diabetes-type": "Diabetes type",
   "diagnosis": "Diagnosis",
@@ -690,15 +700,5 @@
   "caloric-restriction": "Caloric restriction",
   "intermittent-fasting": "Intermittent fasting",
   "paleolithic-diet": "Paleolithic diet",
-  "other": "Other",
-  "HANDSET_IMEI": "IMEI",
-  "HANDSET_NAME": "Handset",
-  "HANDSET_SW_VERSION": "Software version",
-  "SMARTPHONE_MODEL": "Smartphone model",
-  "CGM_NAME": "Cgm product",
-  "CGM_MANUFACTURER": "Cgm manufacturer",
-  "PUMP_MANUFACTURER": "Pump manufacturer",
-  "PUMP_NAME": "Pump name",
-  "MOBILE_APP_VERSION": "Software version",
-  "MOBILE_APP_ACTIVATION_CODE": "Activation code"
+  "other": "Other"
 }
