--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -484,7 +484,7 @@
   "override": "Override",
   "page-not-found": "Page not found",
   "parameter-info-title": "Setting information: {{parameterName}}",
-  "parameter-info-open": "Open setting information",
+  "parameter-info-open": "Open {{parameterName}} setting information",
   "parameter-memo-load-error": "The document is currently being updated. The new version will be available soon.",
   "patient": "Patient",
   "patient-list-search-placeholder": "Search for a patient...",
