add update time in yourloops

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -172,6 +172,7 @@
   "Undelivered": "Undelivered",
   "Underride": "Underride",
   "Unit": "Unit",
+  "Updated at": "Updated at",
   "Uploaded on": "Uploaded on",
   "Value": "Value",
   "W_Wednesday": "W",
