YLP-3800 add device history (#1922)
* migrate parameters history into the new models
* feat: implement device changes history (v1) and tests
* add device history sorting, and minor changes
* update changelog
* ignore added new translation keys for device change history
* fix medical data test: update data with new payload
* update field name to device id
* fix sonar issue: remove duplicated import
* PR feedbacks

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -186,7 +186,7 @@
   "caregivers-title": "My Caregivers",
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
-  "change-history": "Change history",
+  "change-history": "Settings change history",
   "change-password-info": "You will receive an e-mail allowing you to change your password.",
   "chat-footer-private": "Private",
   "chat-footer-reply": "Reply",
@@ -259,6 +259,15 @@
   "device": "Device",
   "devices": "Devices",
   "devices-and-current-parameters": "Devices and current settings",
+  "device-change-history": "Devices change history",
+  "device-change-handset-imei": "IMEI",
+  "device-change-handset-device-id": "Handset",
+  "device-change-sw-version": "Software version",
+  "device-change-cgm-name": "Cgm product",
+  "device-change-cgm-manufacturer": "Cgm manufacturer",
+  "device-change-pump-manufacturer": "Pump manufacturer",
+  "device-change-pump-name": "Pump name",
+  "device-history-title": "Device change",
   "diabetes-type": "Diabetes type",
   "diagnosis": "Diagnosis",
   "diet": "Diet",
