YLP-3613 Memos on DBL settings in Devices view (#1923)

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -492,6 +492,9 @@
   "optional": "Optional",
   "override": "Override",
   "page-not-found": "Page not found",
+  "parameter-info-title": "Setting information: {{parameterName}}",
+  "parameter-info-open": "Open {{parameterName}} setting information",
+  "parameter-memo-load-error": "The document is currently being updated. The new version will be available soon.",
   "patient": "Patient",
   "patient-list-search-placeholder": "Search for a patient...",
   "patient-list-search-tooltip": "Search by first name, last name or birthdate (dd/mm/yyyy)",
