YLP-3634 Add tooltips for Rescue carbs and Manual bolus metrics (#1929)

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -126,7 +126,6 @@
   "aria-team-add-member-dialog-title": "New member for {{teamName}}",
   "aria-team-leave-dialog-question": "Are you sure you want to leave the care team {{teamName}}?",
   "aria-team-leave-dialog-title": "Leave care team",
-  "average-daily-insulin-tooltip": "**Avg. Daily Total Insulin:** All basal and bolus insulin delivery (in Units) added together, divided by the number of days in this view",
   "average-glucose": "Avg. Glucose ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Avg. Glucose ({{bgSourceLabel}}):** All {{bgSourceLabel}} glucose values added together, divided by the number of readings.",
   "avg-daily-carbs": "Avg. Daily Carbs",
@@ -651,12 +650,16 @@
   "tooltip-avg-daily-week-carbs": "**Total Carbs**: All carb entries added together (meals and rescue carbs), then divided by the number of days in this view.",
   "tooltip-declared-derived-carbs": "Derived from {{total}} carb entries, including rescue carbs.",
   "tooltip-empty-stat": "**Why is this stat empty?**\n\nThere is not enough data present in this view to calculate it.",
+  "tooltip-manual-bolus": "**Manual bolus**: Total insulin dose delivered (in units) as a manual bolus, divided by the number of days in this view.",
+  "tooltip-manual-bolus-details": "In some cases, a large number of manual boluses may indicate that the algorithm is not aggressive enough. Other signs may confirm this hypothesis, such as frequent hyperglycaemia or a difference (-10%) between the setting “Total Daily Insulin” and the total daily dose of insulin actually delivered.",
   "tooltip-per-day-carbs": "**Total Carbs**: All carb entries from meals or rescue carbs added together.",
   "tooltip-release-notes": "Release notes",
+  "tooltip-rescue-carbs": "**Rescue carbs**: All rescue carb entries added together (recommended or taken spontaneously), then divided by the number of days in this view.\n\nComputed from {{total}} rescue carbs.",
+  "tooltip-rescue-carbs-details": "A significant amount of rescue carbs may, in some cases, indicate that the algorithm is too aggressive. Other signs may confirm this hypothesis, such as frequent hypoglycemia or a difference (+10%) between the setting “Total Daily Insulin” and the total daily dose of insulin actually delivered.",
   "tooltip-smbg-data": "Derived from _**{{total}}**_ {{smbgLabel}} readings.",
   "total-declared-carbs": "Total of declared carbs",
   "total-insulin": "Total Delivered Insulin",
-  "total-insulin-days-tooltip": "**Total Delivered Insulin:** All basal and bolus insulin delivery (in Units) added together.",
+  "total-insulin-days-tooltip": "**Total Delivered Insulin:** All basal and bolus insulin delivery (in Units) added together, divided by the number of days in this view.",
   "total-insulin-how-calculate-tooltip": "**How we calculate this:** (%) is the respective total of basal or bolus delivery divided by total insulin delivered for this time period.",
   "training": "Training",
   "training-body": "New training available, please read what's new before continuing on YourLoops.",
